# credora

./: .env.example  .gitignore  COMPETITOR_ANALYSIS_SETUP.md  COMPETITOR_FRONTEND_SUMMARY.md  DEPLOYMENT_COMPLETE.md  PROJECT_STATUS.md  PUSH_SUMMARY.md  QUICK_FIX.txt  QUICK_START.md  README.md  RUN_COMMANDS.txt  START_SERVERS.md  SystemReport.md  TEST_RESULTS.md  THEME_COMPARISON.md  UI_UX_IMPROVEMENTS.md  UPDATES.md  api_competitor_report_20260121_222036.txt  api_competitor_report_20260121_223126.txt  build_faiss_index.py  client_secret_1043447885912-bmp7b86s35fom81pk14e2o8uvmmqrt80.apps.googleusercontent.com.json  env.download  pyproject.toml  run_migration.py  start_api.py  start_api_correct.bat  test_browser_direct.py  test_competitor_auto.py  test_competitor_simple.py  test_everything.bat
credora/: __init__.py  api_server.py  config.py  oauth_server.py
credora-engine/: pom.xml
credora-frontend/: DASHBOARD_ENHANCEMENTS.md  VOICE_AGENT_GUIDE.md  VOICE_AGENT_IMPLEMENTATION.md  WAKE_WORD_GUIDE.md  WAKE_WORD_TESTING.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
credora-frontend/public/images/: .gitkeep
credora-frontend/src/: middleware.ts
credora-frontend/src/app/: globals.css  layout.tsx  page.tsx
credora-frontend/src/lib/: config.ts  sounds.ts
credora/agents/: __init__.py  cfo.py  competitor.py  onboarding.py  rag.py
credora/data/faiss_index/: index.faiss  index.pkl
credora/database/: __init__.py  connection.py  token_store.py
credora/mcp_servers/: __init__.py
credora/normalization/: __init__.py  currency.py  models.py  normalizer.py
credora/services/: __init__.py  browser_service.py  data_sync.py  fpa_cache.py  storage.py
credora/tools/: cfo.py  connection.py  data_fetcher.py  fpa_engine.py  google_ads.py  mcp_router.py  mock_data_reader.py  onboarding.py
mock_data/google/: campaigns.json  customers.json
mock_data/meta/: ad_accounts.json  campaigns.json
mock_data/shopify/: orders.json  products.json
(+179 files in other folders)
